--- a/style.css
+++ b/style.css
@@ -1,9 +1,25 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: "tahoma";
+  font-weight: normal;
 }
 body{
   background-color: #06c;
   padding: 50px;
   color: white;
+}
+main{
+  padding: 10px;
+  border: 2px solid #eee;
+}
+h2{
+  text-transform: capitalize;
+}
+h2 span{
+  margin: 0px 10px;
+  padding: 3px 5px;
+  background-color: rgba(255,255,255,.8);
+  border-radius: 5px;
+  color: #4a6;
 }
